<resources>
    <string name="app_name">Control</string>
    <string name="timetable">Timetable</string>
    <string name="subjects">Subjects</string>
    <string name="groups">Groups</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="auditory">Auditory</string>
    <string name="save">Save</string>
    <string name="title_hint">Topic of the lesson</string>
    <string name="details">Details</string>
    <string name="auditory_hint">Auditory</string>
    <string name="lecture">Lection</string>
    <string name="laboratory_work">Laboratory work</string>
    <string name="practice">Practice</string>
    <string name="type_hint">Type:</string>
    <string name="subject_hint">Subject:</string>
    <string name="groups_hint">Groups:</string>
    <string name="edit">Edit</string>
    <string name="change_subject_name">Change the name of the subject</string>
    <string name="cancel">Cancel</string>
    <string name="delete_subject">Delete subject \"%s\"?\nAll associated data will be deleted!</string>
    <string name="ok">OK</string>
    <string name="add_new_subject">Add new subject</string>
    <string name="change_group_s_name">Change the name of the group</string>
    <string name="delete_group">Delete group \"%s\"?\nAll associated data will be deleted!</string>
    <string name="add_new_group">Add new group</string>
    <string name="delete_student">Delete student %s?\nAll associated data will be deleted!</string>
    <string name="add_new_student">Add new student</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="enter_data">Enter data</string>
    <string name="edit_student_data">Edit student data</string>
    <string name="blank_content">Content mustn\'t be empty!</string>
    <string name="blank_name">First and last names mustn\'t be empty!</string>
    <string name="delete">Delete</string>
    <string name="lesson">Lesson</string>
    <string name="add_lesson">Add lesson</string>
    <string name="enter_auditory">Please enter auditory</string>
    <string name="enter_group">Please select at least one group</string>
    <string name="date_hint">Date of the lesson</string>
    <string name="time_start_hint">Start</string>
    <string name="default_start_time">12:00</string>
    <string name="zero_groups_error">Add at least one group!</string>
    <string name="zero_subjects_error">Add at least one subject!</string>
    <string name="time_end_hint">End</string>
    <string name="default_end_time">13:30</string>
    <string name="notes_hint">Notes</string>
    <string name="notes_hint_double">Notes:</string>
    <string name="start_control">Start control</string>
    <string name="control_datetime">%1$s | %2$s - %3$s</string>
    <string name="ask_delete_lesson">"Do you really want to delete this lesson?"</string>
    <string name="invalid_times">The start time of the lesson must be greater than the end time!</string>
    <string name="registered_students">Registered students: %d/%d</string>
    <string name="stop_control">Stop control</string>
    <string name="end_control">Control completed</string>
    <string name="early_control">Early to start</string>
    <string name="create_ap_hint">To start monitoring, you must configure the access point and launch it, then tell students the name and password if necessary. Before doing this, it\'s recommended to turn off the mobile Internet.\n\nWant to go to settings?</string>
    <string name="create_ap">Create AP</string>
    <string name="error_deleting_lesson">Error deleting lesson</string>
    <string name="error_saving_lesson">Error saving lesson</string>
    <string name="error_saving_group">Error saving group</string>
    <string name="error_deleting_group">Error deleting group</string>
    <string name="error_saving_student">Error saving student</string>
    <string name="error_deleting_student">Error deleting student</string>
    <string name="error_saving_subject">Error saving subject</string>
    <string name="error_deleting_subject">Error deleting subject</string>
    <string name="student_count_placeholder">%d/%d people</string>
    <string name="quit_from_control">Do you really want to stop control and exit?</string>
    <string name="data_control">Data control</string>
    <string name="export_excel">Export to Excel</string>
    <string name="clean_data">Clean data</string>
    <string name="sure_clean_data">Do you really want to clean all data?</string>
    <string name="back">Back</string>
    <string name="error_export">Export error</string>
    <string name="ok_creating_file">Export finished</string>
    <string name="need_files_permission">Exporting data requires permission to access external storage. All data will be saved to the downloads folder.</string>
    <string name="person_name_header">Name</string>
    <string name="quantity">N</string>
    <string name="amount">Amount</string>
    <string name="percent">%</string>
    <string name="total">Total</string>
    <string name="ok_data_clear">All data has been deleted! Restarting…</string>
    <string name="error_data_clear">Error deleting data</string>
    <string name="export_path_long" translatable="false">%s/Control/%s</string>
    <string name="export_path_short" translatable="false">/Control/%s</string>
    <string name="export_path_db_short" translatable="false">/Control/</string>
    <string name="manual_mark">Mark manually</string>
    <string name="error_saving_marks">Error saving marks</string>
    <string name="no_unmarked_students">There are no unmarked students!</string>
    <string name="import_students">Import students from Excel-file</string>
    <string name="start_row">Start row number</string>
    <string name="choose_file">Choose file</string>
    <string name="check_input_data">Please check that the entered data is correct</string>
    <string name="import_ok">Data import completed successfully</string>
    <string name="import_error">Import error. Check that the entered data is correct</string>
    <string name="choose_file_error">Please select a file in .xlsx format</string>
    <string name="row_numbers_error">Invalid row numbers entered</string>
    <string name="sheet_name_error">Sheet name cannot be blank</string>
    <string name="column_error">Please input column</string>
    <string name="export_db">Export to DB-file</string>
    <string name="import_db">Import from DB-file</string>
    <string name="export_db_filename" translatable="false">controldb_%s.db</string>
    <string name="restart_error">Restart error. Please do it yourself</string>
    <string name="import_db_error">Import error. You haven\'t selected a DB-file</string>
    <string name="student_group">Group: %s</string>
    <string name="student_name">Student: %s</string>
    <string name="attendance">Attendance</string>
    <string name="student">Student</string>
    <string name="list_of_lessons">Lessons</string>
    <string name="mark_short">Mark</string>
    <string name="topic">Topic</string>
    <string name="zero_lessons_error">Create at least one lesson!</string>
    <string name="ok_saving_marks">Marks saved</string>
    <string name="table_hint">Table:</string>
    <string name="import_same">Import error: these students already exist</string>
    <string name="column_hint">Column (example: \"B\")</string>
    <string name="settings">Settings</string>
    <string name="week">week</string>
    <string name="start_semester">Start of the semester</string>
    <string name="set_semester_start">Set the start date of the semester</string>
    <string name="import_students_hint">Cells must contain a last name, first name, and middle name (optional), separated by spaces. The import ends with an empty cell in the column.</string>
    <string name="export_hint">Data is exporting to the Download/Control folder</string>
</resources>