<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:icon="@drawable/baseline_edit_24"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/baseline_delete_forever_24"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:icon="@drawable/baseline_check_24"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/dataControl"
        android:icon="@drawable/baseline_dataset_24"
        android:title="@string/data_control"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/importStudents"
        android:icon="@drawable/baseline_download_24"
        android:title="@string/import_students"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>