<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/small_spacing">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/settingsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:hint="@string/start_semester"
            android:inputType="text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="none"
                tools:text="01.09.2024" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exportExcel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/export_excel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exportDb"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/export_db" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/importDb"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/import_db" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clean"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/clean_data" />

    </LinearLayout>

</LinearLayout>